Fixed alignment perfectionism fails

--- a/public/css/css.css
+++ b/public/css/css.css
@@ -190,7 +190,7 @@ input:active, button:active {
   font-size: 17px;
 }
 #volumeWrap:hover {
-  width: 80px;
+  width: 85px;
 }
 #toggleVolumeWrap {
   padding-top: 2px;
